--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -4,9 +4,20 @@
 
 # Learn more from ready-to-use templates: https://www.gitpod.io/docs/introduction/getting-started/quickstart
 
-# tasks:
-#   - init: npm install
-#     command: npm start
+# two tasks opened in two views in VS Code, one on the left, the other on the right
 
 tasks:
-  - command: npm start
+    - name: run back-end
+      openMode: split-left
+      command: |
+          npm install pg dotenv 
+          npm install 
+          npm start
+
+    - name: run front-end
+      openMode: split-right
+      command: |
+          cd client 
+          npm install 
+          echo "REACT_APP_API_URL=$(gp url 3001)" > .env 
+          npm start
