--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -21,6 +21,9 @@ tasks:
           npm start
       openMode: split-right
 
+    - name: create tables in db
+      command: './init-db.sh'
+
 ports:
     - name: front-end
       port: 3000
@@ -30,3 +33,9 @@ ports:
       port: 3001
       onOpen: ignore
       visibility: public
+
+    - name: database
+      port: 5432
+      onOpen: ignore
+
+
